--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,3 +1,4 @@
+<div class="loading" ng-show="load"><img src="../img/preloader.gif" /></div>
 <div class="grid_4" id="contact">
 <div class="container">
   <h1 class="blog_head">{{list[0].s1_contacts}}</h1>
