--- a/app/templates/portfolio-expanded.html
+++ b/app/templates/portfolio-expanded.html
@@ -1,3 +1,4 @@
+<div class="loading" ng-show="load"><img src="../img/preloader.gif" /></div>
 <header class="ae-container-fluid ae-container-fluid--full rk-header ">
     <div class="ae-container-fluid rk-topbar">
       <h1 class="rk-logo"><a href="index.html">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1>
