--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -1,3 +1,4 @@
+<div class="loading" ng-show="load"><img src="../img/preloader.gif" /></div>
       <header class="ae-container-fluid ae-container-fluid--full rk-header ">
 
           <div class="ae-container-fluid rk-topbar">
