--- a/app/templates/news-singel.html
+++ b/app/templates/news-singel.html
@@ -1,4 +1,4 @@
-<div class="loading" ng-show="load"><img src="../img/preloader.gif" /></div>
+<div class="loading" ng-show="load"><img src="{{list[0].loader.url}}" /></div>
 <div class="grid_4">
 		<div class="container">
 			<h1 class="blog_head">{{list[0].s1_news}}</h1>
