--- a/app/templates/startPage/main.html
+++ b/app/templates/startPage/main.html
@@ -1,3 +1,4 @@
+<div class="loading" ng-show="load"><img src="{{list[0].loader.url}}" /></div>
 <section id="about" class="s_about bg_light" header-animate left-right-animate animate>
 	<div class="section_header">
 		<h2>{{list[0].s1_about_us}}</h2>
@@ -87,7 +88,7 @@
     <div class="section_header">
   		<h2>{{list[0].s1_people_who_have_made_efforts}}</h2>
   		<div class="s_descr_wrap">
-  			<div class="s_descr">{{list[0].s2_about_section}}</div>
+  			<div class="s_descr">{{list[0].s4_about_section}}</div>
   		</div>
   	</div>
 		<div class="section-pb">
