--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -83,11 +83,11 @@
 </section>
 
 
-	<section id="people" class="homesect s_gray section_7"  >
+	<!-- <section id="people" class="homesect s_gray section_7"  >
     <div class="section_header">
   		<h2>{{list[0].s1_people_who_have_made_efforts}}</h2>
   		<div class="s_descr_wrap">
-  			<div class="s_descr">{{list[0].s2_about_section}}</div>
+  			<div class="s_descr">{{list[0].s4_about_section}}</div>
   		</div>
   	</div>
 		<div class="section-pb">
@@ -105,7 +105,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 <section id="contacts" class="s_contacts bg_light" >
 	<div class="section_header">
