--- a/app/templates/single-more.html
+++ b/app/templates/single-more.html
@@ -1,4 +1,4 @@
-<div class="loading" ng-show="load"><img src="../img/preloader.gif" /></div>
+<div class="loading" ng-show="load"><img src="{{list[0].loader.url}}" /></div>
 <div class="grid_4">
 		<div class="container">
 			<h1 class="blog_head">{{viewAboutUs.languageTitle}}</h1>
