--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -1,4 +1,4 @@
-<div class="loading" ng-show="load"><img src="../img/preloader.gif" /></div>
+<div class="loading" ng-show="load"><img src="{{list[0].loader.url}}" /></div>
 <header class="ae-container-fluid ae-container-fluid--full rk-header ">
 <div class="container center-inside-content">
       <div class="row">
