--- a/app/pre_proc/sass/main.sass
+++ b/app/pre_proc/sass/main.sass
@@ -403,8 +403,10 @@ svg
 	background-color: #fff
 	max-width: 500px
 	margin: auto
-	p,
-	h3
+	p
+	font-size: 16px
+
+	h3,p
 		padding: 20px
 		padding-bottom: 0
 	h3
@@ -412,6 +414,7 @@ svg
 		text-align: center
 		text-transform: uppercase
 		font-weight: 400
+		font-size: 20px
 		margin-top: 20px
 		padding-top: 25px
 	p
