--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -13,8 +13,8 @@
             <h3>{{list[0].s1_contacts}}</h3>
             <p>{{list[0].artistic_director}}:</p>
             <p class="head">{{contactList[0].name}}</p>
-              <p>{{list[0].PHONE}}: {{contactList[0].headTelephone}} {{list[0].Your_E_mail}}:<b> {{contactList[0].headEmail}}</b></p>
-              <p class="addr">{{contactList[0].mailing_address}}:</p>
+              <p>{{list[0].PHONE}}: <b> {{contactList[0].headTelephone}} </b> </p><p>{{list[0].Your_E_mail}}:<b> {{contactList[0].headEmail}}</b></p>
+              <p class="addr">{{contactList[0].ADDRESS}}</p>
               <p>{{contactList[0].street}}</p>
               <p class="some-text">{{list[0].national}}</p>
               <p>{{list[0].PHONE}}: {{contactList[0].phone}}</p>
