--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -2,7 +2,8 @@
       <header class="ae-container-fluid ae-container-fluid--full rk-header ">
 
           <div class="ae-container-fluid rk-topbar">
-            <h1 class="rk-logo"><a href="index.html">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1>
+            <!-- <h1 class="rk-logo"><a ui-sref="base.index">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1> -->
+            <h1 class="rk-logo">{{list[0].s1_portfolio}}<sup>cheremosh</sup></h1>
             <!-- <nav class="rk-navigation">
               <ul class="rk-menu">
                 <li class="active rk-menu__item" ng-repeat="years in year"><a ng-mouseover="setCategory(years.objectId)" href="" class="rk-menu__link">{{years.year}}</a>
