--- a/app/templates/startPage/main.html
+++ b/app/templates/startPage/main.html
@@ -64,7 +64,7 @@
 						<div class="port_item_cont"  >
 							<h3>{{portfolioUsLists.countryLan}}</h3>
 							<p>{{portfolioUsLists.cityLan}}</p>
-							<a href="#" class="popup_content">{{list[0].all_other_trips}}</a>
+							<a href="#" class="popup_content">{{list[0].increase}}</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
